--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="imagen">
-            <img src="assets/img/iguana-1.jpg" alt="Iguana verde">
+            <img src="assets/img/iguana-1.png" alt="Iguana verde">
         </div>
     </section>
 
@@ -60,14 +60,14 @@
 
     <!-- SECCIÓN 3: GALERÍA (FLEX) -->
     <section class="galeria">
-        <img src="assets/img/iguana-2.jpg" alt="Iguana 2">
-        <img src="assets/img/iguana-3.jpg" alt="Iguana 3">
-        <img src="assets/img/iguana-4.jpg" alt="Iguana 4">
+        <img src="assets/img/iguana-2.png" alt="Iguana 2">
+        <img src="assets/img/iguana-3.png" alt="Iguana 3">
+        <img src="assets/img/iguana-4.png" alt="Iguana 4">
     </section>
 
     <!-- FOOTER -->
     <footer>
-        <p>© 2025 Iguana Page — Desafío Latam</p>
+        <p>© 2025 Iguana Page — Diego Catalán</p>
     </footer>
 
 </body>
